# python-template

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  HOW_TO_RELEASE.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_template.helpers.html  python_template.html  python_template.logging.html  python_template.utils.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  modules.doctree  python_template.doctree  python_template.helpers.doctree  python_template.logging.doctree  python_template.utils.doctree
.doctrees/tutorials/: index.doctree  logging.doctree
.github/workflows/: CI.yaml  CI.yml  create-release-pr.yaml  docs.yaml  docs.yml  release-pypi.yaml  release-pypi.yml  release.yml
_notes/: delete-branch.md  release.md  sphinx.md
_sources/: python_template.helpers.rst  python_template.logging.rst  python_template.logging.rst.txt  python_template.rst  python_template.rst.txt  python_template.utils.rst.txt
_sources/tutorials/: index.md
_static/: documentation_options.js
docs/main/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  template.html  template.utils.html
docs/main/.doctrees/: environment.pickle  index.doctree  modules.doctree  template.doctree  template.utils.doctree
docs/main/_sources/: index.rst.txt  template.utils.rst.txt
docs_src/: conf.py  index.md  index.rst  template.rst  template.utils.rst
docs_src/tutorials/: logging.ipynb  logging.py
src/python_template/: README.md  __init__.py  __main__.py  cython.c
src/python_template/helpers/: __init__.py  _helpers.py
src/python_template/logging/: __init__.py  _logging.py
src/python_template/utils/: __init__.py  _utils.py
src/template/: __init__.py
src/template/utils/: __init__.py  _utils.py
template/: __init__.py
tests/: test_import.py
tutorials/: index.html  logging.html
