# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
dynamic = ["version"]
dependencies = ["typing_extensions >= 4.5; python_version < '3.10'"]
requires-python = ">= 3.9"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog", "tqdm"]
docs = [
    "sphinx",
    "myst-parser",
    "myst-nb",
    "sphinx-book-theme",
    "jupyter-sphinx",
]
# gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/python-template"
# Documentation = "https://yu9824.github.io/python-template/"
# PyPI = "https://pypi.org/project/python-template/"
Source = "https://github.com/yu9824/python-template"
Tracker = "https://github.com/yu9824/python-template/issues"
# Changelog = "https://github.com/yu9824/python-template/blob/main/CHANGELOG.md"

# [project.scripts]
# python-template = "python_template.__main__:entrypoint"

# [project.gui-scripts]
# python-template-gui = "python_template:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "python_template.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]
